Bug 108945 - Batch image filtering overwrite mode: always overwrite doesn't work
Summary: Batch image filtering overwrite mode: always overwrite doesn't work
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: BatchQueueManager-Plugins (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-07-11 21:46 UTC by Bernie
Modified: 2022-02-06 04:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernie 2005-07-11 21:46:00 UTC
Version:           digikam 0.7.3 beta2 (using KDE KDE 3.4.1)
Installed from:    SuSE RPMs
OS:                Linux

I want to process a batch of images via the tools-->batch processes--> filter images option in the menu bar. I want the images to be replaced by the processed image with the same name. So target folder is the same as where the images a residing and I put the overwite mode to "always overwrite" (as I don't want to be bothered with a confirmation dialog 200 times). However after starting, a confirmation dialog for overwriting the old image pops up for each image! In "always overwrite" mode this shouldn't happen.
Comment 1 Angelo Naselli 2006-04-15 12:24:03 UTC
SVN commit 530081 by anaselli:

- typo

BUG: 108945


 M  +1 -1      batchprocessimagesdialog.cpp  


--- trunk/extragear/libs/kipi-plugins/batchprocessimages/batchprocessimagesdialog.cpp #530080:530081
@@ -1046,7 +1046,7 @@
     if (OverWrite == i18n("Skip"))
         return OVERWRITE_SKIP;
 
-    if (OverWrite == i18n("Always OverWrite"))
+    if (OverWrite == i18n("Always Overwrite"))
         return OVERWRITE_OVER;
 
     return OVERWRITE_ASK;
Comment 2 Angelo Naselli 2006-04-15 12:43:11 UTC
*** Bug 122049 has been marked as a duplicate of this bug. ***
Comment 3 Javier Ortega Conde (Malkavian) 2006-08-26 18:22:45 UTC
In Kubuntu 6.06 (Dapper) with Linux 2.6.15-26-amd64-k8 and KDE 3.5.2, using Digikam 0.8.2-rc1 and kipi-plugins 0.1+rc1-1ubuntu2, the bug continues.