- typo

BUG: 108945

svn path=/trunk/extragear/libs/kipi-plugins/; revision=530081